--- a/src/components/Link/link.css
+++ b/src/components/Link/link.css
@@ -1,50 +1,58 @@
-a.nav-link {
+.nav-link::slotted(a) {
+  --sgds-link-color: var(--sgds-primary-color);
   display: inline-flex;
   height: var(--sgds-dimension-24);
   justify-content: center;
   align-items: center;
   gap: var(--sgds-gap-xs);
   flex-shrink: 0;
-  color: var(--sgds-primary-color);
+  /* If clash of styles happens from other light dom css on anchor tag, will need to add !important here */
+  color: var(--sgds-link-color, --sgds-primary-color); 
   cursor: pointer;
-  text-decoration: none;
+  text-decoration: none !important;
 }
 
-a.nav-link:hover {
-  color: var(--sgds-primary-color-emphasis);
+.nav-link::slotted(a:hover),
+.nav-link::slotted(a[active]),
+.nav-link::slotted(a:focus),
+.nav-link::slotted(a:focus-visible) {
+  --sgds-link-color-emphasis: var(--sgds-primary-color-emphasis);
+  color: var( --sgds-link-color-emphasis, --sgds-primary-color-emphasis);
 }
 
-a.nav-link:focus,
-a.nav-link:focus-visible {
-  box-shadow: var(--sgds-box-shadow-focus);
-  color: var(--sgds-primary-color-emphasis);
+.nav-link::slotted(a:focus),
+.nav-link::slotted(a:focus-visible) {
   outline: 0;
+  box-shadow: var(--sgds-box-shadow-focus);
 }
 
-a.nav-link.disabled,
-a.nav-link[disabled] {
+.nav-link::slotted(a[disabled]) {
   opacity: var(--sgds-opacity-50);
   cursor: not-allowed;
 }
 
-:host([variant="danger"]) a.nav-link {
-  color: var(--sgds-danger-color);
+
+
+:host([variant="danger"]) .nav-link::slotted(a) {
+  --sgds-link-color: var(--sgds-danger-color);
+  color: var(--sgds-link-color, --sgds-danger-color);
 }
 
-:host([variant="danger"]) a.nav-link:hover,
-:host([variant="danger"]) a.nav-link:focus,
-:host([variant="danger"]) a.nav-link:focus-visible {
-  color: var(--sgds-danger-color-emphasis);
+:host([variant="danger"]) .nav-link::slotted(a:hover),
+:host([variant="danger"]) .nav-link::slotted(a:focus),
+:host([variant="danger"]) .nav-link::slotted(a:focus-visible) {
+  --sgds-link-color-emphasis: var(--sgds-danger-color-emphasis);
+  color: var(--sgds-link-color-emphasis, --sgds-danger-color-emphasis);
 }
 
-:host([size="lg"]) a.nav-link {
+:host([size="lg"]) .nav-link::slotted(a) {
     height: var(--sgds-dimension-32);
-    font-size: var(--sgds-font-size-3);
+    font-size: var(--sgds-font-size-3) !important;
 
 }
-:host([size="sm"]) a.nav-link {
+:host([size="sm"]) .nav-link::slotted(a) {
     height: var(--sgds-dimension-20);
-    font-size: var(--sgds-font-size-1);
+    font-size: var(--sgds-font-size-1) !important;
 }
 
 /* Check with Andy if target blank need to auto add an icon */
