chore(input): add slot to static icon

--- a/src/components/Input/input.css
+++ b/src/components/Input/input.css
@@ -96,3 +96,8 @@
 .form-control-group.quantity-toggle {
   padding: 0;
 }
+
+slot[name="validIcon"]::slotted(*),
+slot[name="validIcon"] svg {
+  color: var(--sgds-form-success-color);
+}
