--- a/src/components/Modal/modal.css
+++ b/src/components/Modal/modal.css
@@ -65,23 +65,21 @@
 slot[name="title"]::slotted(*) {
   --sgds-margin-2-xs: var(--sgds-margin-none);
   --sgds-margin-xs: var(--sgds-margin-none);
-  --sgds-line-height-heading: var(--sgds-line-height-body);
   --sgds-font-size-6: var(--sgds-font-size-4);
   display: flex;
   flex: 1 1 auto;
   align-items: center;
   gap: 1rem;
   margin: var(--sgds-margin-none, var(--sgds-margin-xs, --sgds-margin-2-xs));
-  line-height: var(--sgds-line-height-heading, --sgds-line-height-body);
+  line-height: var(--sgds-line-height-heading);
   font-size: var(--sgds-font-size-6, --sgds-font-size-4);
 }
 
 slot[name="description"]::slotted(*) {
   --sgds-paragraph-spacing-xl: var(--sgds-margin-none);
-  --sgds-line-height-body: var(--sgds-line-height-heading);
   margin: var(--sgds-margin-none, --sgds-paragraph-spacing-xl);
   color: var(--sgds-default-color-subtle);
-  line-height: var(--sgds-line-height-body, --sgds-line-height-heading);
+  line-height: var(--sgds-line-height-body);
 }
 
 .modal-close {
