--- a/src/components/Accordion/accordion-item.css
+++ b/src/components/Accordion/accordion-item.css
@@ -5,7 +5,7 @@
 :host([density="compact"]) .accordion-btn {
   padding: var(--sgds-padding-sm) var(--sgds-padding-sm);
   font-size: var(--sgds-font-size-2);
-  line-height: var(--sgds-line-height-heading);
+  line-height: var(--sgds-line-height-min);
 }
 
 :host([density="compact"]) .content {
@@ -32,7 +32,7 @@
   text-align: left;
   border: 0;
   color: var(--sgds-default-color);
-  line-height: var(--sgds-line-height-body);
+  line-height: var(--sgds-line-height-heading);
   font-size: var(--sgds-font-size-3);
   overflow-anchor: none;
 }
