chore(*): review icon dependent set

--- a/src/styles/feedback.css
+++ b/src/styles/feedback.css
@@ -1,11 +1,8 @@
 .invalid-feedback-container {
   display: flex;
   gap: var(--sgds-form-gap-sm);
-}
-
-.invalid-feedback-container slot::slotted(*),
-.invalid-feedback-container svg {
   color: var(--sgds-form-danger-color);
+
 }
 
 .invalid-feedback {
@@ -13,4 +10,8 @@
   font-size: var(--sgds-font-size-1);
   font-weight: var(--sgds-font-weight-regular);
   line-height: var(--sgds-line-height-min);
+}
+
+.valid-icon{
+  color: var(--sgds-form-success-color);
 }
