--- a/src/components/Accordion/accordion-item.css
+++ b/src/components/Accordion/accordion-item.css
@@ -12,12 +12,6 @@
   padding: var(--sgds-padding-xs) var(--sgds-padding-sm) var(--sgds-padding-sm);
 }
 
-:host([density="compact"]) slot[name="caret"]::slotted(*),
-:host([density="compact"]) slot[name="caret"] svg {
-  width: var(--sgds-icon-size-md);
-  height: var(--sgds-icon-size-md);
-}
-
 .accordion-item {
   border-bottom: var(--sgds-border-width-1) solid var(--sgds-default-border-color-muted);
 }
@@ -68,16 +62,14 @@
 }
 
 slot[name="caret"]::slotted(*),
-slot[name="caret"] svg {
+slot[name="caret"] sgds-icon {
   margin-left: auto;
   transition: transform 0.2s ease-in-out;
-  width: var(--sgds-icon-size-lg);
-  height: var(--sgds-icon-size-lg);
   color: var(--sgds-default-color-subtle);
 }
 
 .accordion-btn:not(.collapsed) slot[name="caret"]::slotted(*),
-.accordion-btn:not(.collapsed) slot[name="caret"] svg {
+.accordion-btn:not(.collapsed) slot[name="caret"] sgds-icon {
   transform: rotate(-180deg);
 }
 
