--- a/cypress/apps/angular-app/src/app/app.component.html
+++ b/cypress/apps/angular-app/src/app/app.component.html
@@ -14,6 +14,7 @@
 <dropdown-component></dropdown-component>
 <fileupload-component></fileupload-component>
 <input-component></input-component>
+<icon-component></icon-component>
 <modal-component></modal-component>
 <pagination-component></pagination-component>
 <progress-component></progress-component>
