--- a/src/components/DescriptionList/description-list.css
+++ b/src/components/DescriptionList/description-list.css
@@ -3,7 +3,7 @@
     justify-content: space-between;
     align-items: flex-start;
     gap: var(--sgds-gap-xs);
-    padding: var(--sgds-padding-lg) 0;
+    padding: var(--sgds-padding-lg) var(--sgds-padding-xl);
     border-bottom: 1px solid var(--sgds-default-border-color-muted);
 }
 
