--- a/src/themes/night.css
+++ b/src/themes/night.css
@@ -121,7 +121,7 @@
   --sgds-form-bg-transparent: transparent;
   --sgds-form-bg-on-dark: var(--sgds-gray-000);
   --sgds-form-bg-on-light: var(--sgds-gray-800);
-  --sgds-form-color: var(--sgds-gray-000);
+  --sgds-form-color-default: var(--sgds-gray-000);
   --sgds-form-color-inverse: var(--sgds-gray-800);
   --sgds-form-color-muted: var(--sgds-gray-600);
   --sgds-form-color-subtle: var(--sgds-gray-300);
