--- a/src/components/Input/input.css
+++ b/src/components/Input/input.css
@@ -33,7 +33,7 @@
   outline: none;
   padding: 0;
   flex-grow: 1;
-  color: var(--sgds-form-color);
+  color: var(--sgds-form-color-default);
   font-size: var(--sgds-font-size-2);
   line-height: var(--sgds-line-height-body);
 }
@@ -77,7 +77,7 @@
 }
 
 :host(.quantity-toggle) input {
-  text-align:center;
+  text-align: center;
 }
 
 .form-control-prefix,
@@ -88,4 +88,3 @@
 .form-control-group.quantity-toggle {
   padding: 0;
 }
-
