--- a/src/themes/night.css
+++ b/src/themes/night.css
@@ -4,6 +4,7 @@
 
   /* Semantic - Default Colors */
   --sgds-default-bg: var(--sgds-gray-900);
+  --sgds-default-bg-surface: var(--sgds-gray-800);
   --sgds-default-bg-muted: var(--sgds-gray-700);
   --sgds-default-bg-subtle: var(--sgds-gray-500);
   --sgds-default-bg-emphasis: var(--sgds-gray-200);
