docs(icon): add storybook

--- a/src/components/Tooltip/tooltip.css
+++ b/src/components/Tooltip/tooltip.css
@@ -1,3 +1,9 @@
+:host {
+  display: contents;
+}
+.tooltip-placeholder{
+  display: inline-block;
+}
 .tooltip {
   word-wrap: break-word;
   display: block;
