--- a/src/components/Datepicker/datepicker-input.css
+++ b/src/components/Datepicker/datepicker-input.css
@@ -6,7 +6,7 @@
 }
 
 .form-control-group {
-  border-radius: var(--sgds-form-border-radius-md) 0 0 var(--sgds-form-border-radius-md);
+  /* border-radius: var(--sgds-form-border-radius-md) 0 0 var(--sgds-form-border-radius-md); */
 }
 
 .input-feedback {
@@ -14,4 +14,9 @@
   flex-direction: column;
   width: -webkit-fill-available;
   width: -moz-available;
+}
+
+.calendar-btn {
+  all: unset;
+  
 }
