--- a/src/components/Mainnav/mainnav-item.css
+++ b/src/components/Mainnav/mainnav-item.css
@@ -1,31 +1,117 @@
-:host {
-  --mainnav-item-border-bottom-width: 0.125rem;
-}
-li {
-  height: 100%;
-}
-a.nav-link {
-  display: flex;
-  cursor: pointer;
-  color: var(--sgds-body-color);
-  border-bottom: var(--mainnav-item-border-bottom-width) solid transparent;
-  min-height: 100%;
-  align-items: center;
-  padding: 0;
-  text-decoration: none;
-  &.active,
-  &:hover {
-    color: var(--mainnav-theme-color);
-    border-color: var(--mainnav-theme-color);
+@media (min-width: 576px) {
+  :host([expand="sm"]) .nav-link {
+    padding: 0px var(--sgds-padding-md);
   }
-  &:focus-visible {
-    box-shadow: 0 0 0 0.25rem rgba(89, 66, 219, 0.25);
-    outline: 0;
+
+  :host([expand="sm"]) .nav-link:not(.disabled).active {
+    color: var(--sgds-primary-color);
+    border-color: var(--sgds-border-width-4) solid var(--sgds-primary-border-color);
   }
 }
 
+@media (min-width: 768px) {
+  :host([expand="md"]) .nav-link {
+    padding: 0px var(--sgds-padding-md);
+  }
+
+  :host([expand="md"]) .nav-link:not(.disabled).active {
+    color: var(--sgds-primary-color);
+    border-color: var(--sgds-border-width-4) solid var(--sgds-primary-border-color);
+  }
+}
+
+@media (min-width: 992px) {
+  :host([expand="lg"]) .nav-link {
+    padding: 0px var(--sgds-padding-md);
+  }
+
+  :host([expand="lg"]) .nav-link:not(.disabled).active {
+    color: var(--sgds-primary-color);
+    border-color: var(--sgds-border-width-4) solid var(--sgds-primary-border-color);
+  }
+}
+
+@media (min-width: 1200px) {
+  :host([expand="xl"]) .nav-link {
+    padding: 0px var(--sgds-padding-md);
+  }
+
+  :host([expand="xl"]) .nav-link:not(.disabled).active {
+    color: var(--sgds-primary-color);
+    border-color: var(--sgds-border-width-4) solid var(--sgds-primary-border-color);
+  }
+}
+
+@media (min-width: 1400px) {
+  :host([expand="xxl"]) .nav-link {
+    padding: 0px var(--sgds-padding-md);
+  }
+
+  :host([expand="xxl"]) .nav-link:not(.disabled).active {
+    color: var(--sgds-primary-color);
+    border-color: var(--sgds-border-width-4) solid var(--sgds-primary-border-color);
+  }
+}
+
+@media (max-width: 576px) {
+  :host([expand="sm"]) .nav-link:not(.disabled).active {
+    background-color: var(--sgds-default-bg-translucent-subtle);
+  }
+}
+
+@media (max-width: 768px) {
+  :host([expand="md"]) .nav-link:not(.disabled).active {
+    background-color: var(--sgds-default-bg-translucent-subtle);
+  }
+}
+
+@media (max-width: 992px) {
+  :host([expand="lg"]) .nav-link:not(.disabled).active {
+    background-color: var(--sgds-default-bg-translucent-subtle);
+  }
+}
+
+@media (max-width: 1200px) {
+  :host([expand="xl"]) .nav-link:not(.disabled).active {
+    background-color: var(--sgds-default-bg-translucent-subtle);
+  }
+}
+
+@media (max-width: 1200px) {
+  :host([expand="xxl"]) .nav-link:not(.disabled).active {
+    background-color: var(--sgds-default-bg-translucent-subtle);
+  }
+}
+
+.nav-link {
+  display: flex;
+  cursor: pointer;
+  border-bottom: var(--sgds-border-width-4) solid transparent;
+  min-height: 100%;
+  align-items: center;
+  text-decoration: none;
+  color: var(--sgds-default-color);
+  padding: var(--sgds-padding-sm) var(--mainnav-padding-x);
+}
+
+.nav-link:not(.disabled).active {
+  color: var(--sgds-primary-color);
+}
+
+.nav-link:not(.disabled):hover {
+  color: var(--sgds-primary-color);
+}
+
+.nav-link:focus,
+.nav-link:focus-visible {
+  outline: 0;
+}
+
+.nav-link:focus-visible {
+  box-shadow: var(--sgds-box-shadow-focus);
+}
+
 .nav-link.disabled {
-  cursor: default;
-  pointer-events: none;
-  opacity: var(--sgds-disabled-opacity);
+  opacity: var(--sgds-opacity-50);
+  cursor: not-allowed;
 }
