chore(progress bar): update name from progress to progress bar

--- a/cypress/apps/angular-app/src/app/app.component.html
+++ b/cypress/apps/angular-app/src/app/app.component.html
@@ -17,7 +17,7 @@
 <icon-component></icon-component>
 <modal-component></modal-component>
 <pagination-component></pagination-component>
-<progress-component></progress-component>
+<progress-bar-component></progress-bar-component>
 <quantitytoggle-component></quantitytoggle-component>
 <radio-component></radio-component>
 <sidenav-component></sidenav-component>
